--- a/source/RevitDevTool/View/Settings/GeneralSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/GeneralSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<UserControl
     x:Class="RevitDevTool.View.Settings.GeneralSettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -20,8 +20,11 @@
     <!--     </ResourceDictionary> -->
     <!-- </FrameworkElement.Resources> -->
 
-    <StackPanel Margin="12">
+    <ScrollViewer
+        HorizontalScrollBarVisibility="Disabled"
+        VerticalScrollBarVisibility="Auto">
         <StackPanel>
+            <StackPanel>
             <ui:CardControl
                 Margin="0,4,0,0"
                 Icon="{ui:SymbolIcon Color24}">
@@ -41,7 +44,7 @@
                     ItemsSource="{Binding Themes, Mode=OneTime}"
                     SelectedItem="{Binding Theme}" />
             </ui:CardControl>
-        </StackPanel>
+            </StackPanel>
         <ui:CardControl
             Margin="0,4,0,0"
             Icon="{ui:SymbolIcon TopSpeed24}">
@@ -59,21 +62,6 @@
         </ui:CardControl>
         <ui:CardAction
             Margin="0,4,0,0"
-            Command="{Binding SaveLogSettingsCommand}"
-            Icon="{ui:SymbolIcon DocumentTextClock24}">
-            <ui:CardAction.Content>
-                <StackPanel>
-                    <ui:TextBlock Text="Log Settings" />
-                    <ui:TextBlock
-                        Appearance="Secondary"
-                        FontTypography="Caption"
-                        Text="Configure logging settings"
-                        TextTrimming="CharacterEllipsis" />
-                </StackPanel>
-            </ui:CardAction.Content>
-        </ui:CardAction>
-        <ui:CardAction
-            Margin="0,4,0,0"
             Command="{Binding ResetSettingsCommand}"
             Icon="{ui:SymbolIcon ArrowReset24}">
             <ui:CardAction.Content>
@@ -87,5 +75,6 @@
                 </StackPanel>
             </ui:CardAction.Content>
         </ui:CardAction>
-    </StackPanel>
-</Page>
+        </StackPanel>
+    </ScrollViewer>
+</UserControl>
