--- a/source/RevitDevTool/View/TraceLogPage.xaml
+++ b/source/RevitDevTool/View/TraceLogPage.xaml
@@ -2,13 +2,13 @@
     x:Class="RevitDevTool.View.TraceLogPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:RevitDevTool.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:log="clr-namespace:Serilog.Events;assembly=Serilog"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:ui="http://revitdevtool.com/xaml"
+    xmlns:view="clr-namespace:RevitDevTool.View"
     xmlns:vm="clr-namespace:RevitDevTool.ViewModel"
-    d:DataContext="{d:DesignInstance vm:TraceLogViewModel}"
+    d:DataContext="{d:DesignInstance vm:TraceLogPageViewModel}"
     d:DesignHeight="600"
     d:DesignWidth="450"
     Background="{DynamicResource SolidBackgroundFillColorBaseBrush}"
@@ -16,68 +16,76 @@
 
     <Page.Resources>
         <ResourceDictionary>
-            <!-- <ResourceDictionary.MergedDictionaries> -->
-            <!--     <ui:ThemesDictionary Theme="Light" /> -->
-            <!--     <ui:ControlsDictionary /> -->
-            <!-- </ResourceDictionary.MergedDictionaries> -->
-            <ObjectDataProvider
-                x:Key="LogLevelProvider"
-                MethodName="GetValues"
-                ObjectType="{x:Type sys:Enum}">
-                <ObjectDataProvider.MethodParameters>
-                    <x:Type TypeName="log:LogEventLevel" />
-                </ObjectDataProvider.MethodParameters>
-            </ObjectDataProvider>
+            <BooleanToVisibilityConverter x:Key="BoolToVisibility" />
+            <converters:InverseBooleanToVisibilityConverter x:Key="InverseBoolToVisibility" />
+            
+            <!-- <Style TargetType="ui:Button" x:Key="ToggleSettingsButtonStyle"> -->
+            <!--     <Setter Property="Icon" Value="{ui:SymbolIcon Settings32}" /> -->
+            <!--     <Style.Triggers> -->
+            <!--         <DataTrigger -->
+            <!--             Binding="{Binding IsSettingsVisible}" -->
+            <!--             Value="True"> -->
+            <!--             <Setter Property="Icon" Value="{ui:SymbolIcon ArrowLeft32}" /> -->
+            <!--         </DataTrigger> -->
+            <!--     </Style.Triggers> -->
+            <!-- </Style> -->
         </ResourceDictionary>
     </Page.Resources>
 
-    <DockPanel
-        ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-        ScrollViewer.VerticalScrollBarVisibility="Disabled">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        
         <DockPanel
+            Grid.Row="0"
             Margin="5"
-            DockPanel.Dock="Top">
-            <ComboBox
-                VerticalAlignment="Center"
-                ItemsSource="{Binding Source={StaticResource LogLevelProvider}}"
-                SelectedItem="{Binding LogLevel}" />
+            LastChildFill="False">
+            <ui:Button
+                Icon="{ui:SymbolIcon Settings32}"
+                Height="{Binding ElementName=ClearLogButton, Path=ActualHeight}"
+                Margin="0,0,8,0"
+                Command="{Binding ToggleSettingsCommand}"
+                ToolTip="Settings" />
             <StackPanel
                 HorizontalAlignment="Right"
                 DockPanel.Dock="Right"
                 Orientation="Horizontal">
                 <ui:Button
-                    Height="{Binding ElementName=ClearLogButton, Path=ActualHeight}"
-                    Margin="0,0,5,0"
-                    Command="{Binding OpenSettingsCommand}"
-                    Icon="{ui:SymbolIcon Settings32}"
-                    ToolTip="Open Settings" />
-                <ui:Button
                     x:Name="ClearLogButton"
-                    Command="{Binding ClearCommand}"
+                    Command="{Binding TraceLogViewModel.ClearCommand}"
                     Content="ClearLog"
                     Icon="{ui:SymbolIcon TextClearFormatting16}"
                     ToolTip="Clear Log" />
                 <ui:Button
                     Margin="5,0"
-                    Command="{Binding ClearGeometryCommand}"
+                    Command="{Binding TraceLogViewModel.ClearGeometryCommand}"
                     Content="ClearGeometry"
                     Icon="{ui:SymbolIcon Shapes16}"
                     ToolTip="Clear Geometry" />
                 <ui:ToggleSwitch
+                    DataContext="{Binding TraceLogViewModel}"
                     IsChecked="{Binding IsStarted}"
                     ToolTip="Start/Stop Listener" />
             </StackPanel>
         </DockPanel>
 
-        <Border
-            Margin="5"
-            Padding="2"
-            Background="{DynamicResource SolidBackgroundFillColorBaseBrush}"
-            BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
-            BorderThickness="1"
-            CornerRadius="6"
-            SnapsToDevicePixels="True">
-            <ContentControl Content="{Binding LogTextBox}" />
-        </Border>
-    </DockPanel>
+        <!-- Content -->
+        <Grid Grid.Row="1">
+            <Border
+                Margin="5"
+                Padding="2"
+                Background="{DynamicResource SolidBackgroundFillColorBaseBrush}"
+                BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                BorderThickness="1"
+                CornerRadius="6"
+                SnapsToDevicePixels="True"
+                Visibility="{Binding IsSettingsVisible, Converter={StaticResource InverseBoolToVisibility}}">
+                <ContentControl Content="{Binding TraceLogViewModel.LogTextBox}" />
+            </Border>
+
+            <view:SettingsView Visibility="{Binding IsSettingsVisible, Converter={StaticResource BoolToVisibility}}" />
+        </Grid>
+    </Grid>
 </Page>
