fix(theme): init at start up
- Fix theme update at start up
- Adjusted GeneralConfig to support theme settings for different Revit versions.

--- a/source/RevitDevTool/Theme/Theme.xaml
+++ b/source/RevitDevTool/Theme/Theme.xaml
@@ -4,7 +4,7 @@
     xmlns:theme="clr-namespace:RevitDevTool.Theme">
 
     <ResourceDictionary.MergedDictionaries>
-        <theme:ThemeResources UsingRevitTheme="True" />
+        <theme:ThemeResources />
         <theme:ControlsResources />
         <ResourceDictionary Source="/RevitDevTool;component/Theme/Styles/Icons.xaml" />
         <ResourceDictionary Source="/RevitDevTool;component/Theme/Styles/Constants.xaml" />
